# Todo-in-cli

./: Cargo.toml  README.md
docs/: github-sync.md  plugin-integration.md
docs/issues/: 01-mvp-tui-todo-roadmap.md  02-llm-provider-chat.md  03-agentic-todo-roadmap-tools.md  04-future-codex-claude-plugin.md  05-future-github-issue-sync.md
src/: agent.rs  api.rs  cli.rs  codex.rs  github.rs  lib.rs  llm.rs  main.rs  markdown.rs  models.rs  storage.rs  tui.rs
